--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Iman F. Qureshi</h1>
-    <p>Hi! I’m an MSc student in Applied Social Data Science at the London School of Economics and Political Science. 
-      I hold a B.A. in Political Science from the University of California, Berkeley where I received the departmental citation (valedictorian) and highest honors in my major.
+    <p>Hi! I’m an MSc student in Applied Social Data Science at the London School of Economics and Political Science. </p>
+    <p>I hold a B.A. in Political Science from the University of California, Berkeley where I received the departmental citation (valedictorian) and highest honors in my major.
     </p>
 </body>
 </html>
