--- a/index.html
+++ b/index.html
@@ -3,12 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</title>
+    <title>Iman F. Qureshi</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            line-height: 1.6;
+            color: #333;
+        }
+
+        header {
+            background: linear-gradient(135deg, #A0435D, #B8556E);
+            padding: 2rem 0;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        header h1 {
+            color: white;
+            font-size: 2.5rem;
+            font-weight: 300;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 3rem 2rem;
+        }
+
+        .profile-section {
+            display: flex;
+            gap: 3rem;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            margin-bottom: 3rem;
+        }
+
+        .profile-image {
+            flex: 0 0 250px;
+        }
+
+        .profile-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+        }
+
+        .profile-content {
+            flex: 1;
+            min-width: 300px;
+        }
+
+        .profile-content h2 {
+            color: #A0435D;
+            margin-bottom: 1rem;
+            font-size: 2rem;
+        }
+
+        .profile-content p {
+            margin-bottom: 1.5rem;
+            font-size: 1.1rem;
+            line-height: 1.8;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 1rem;
+            margin-top: 2rem;
+        }
+
+        .social-links a {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            background: #A0435D;
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            font-weight: 500;
+        }
+
+        .social-links a:hover {
+            background: #8A3A50;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 10px rgba(160, 67, 93, 0.4);
+        }
+
+        .social-links svg {
+            width: 20px;
+            height: 20px;
+            fill: white;
+        }
+
+        @media (max-width: 768px) {
+            .profile-section {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .profile-image {
+                flex: 0 0 200px;
+            }
+
+            header h1 {
+                font-size: 2rem;
+            }
+
+            .social-links {
+                flex-direction: column;
+            }
+
+            .social-links a {
+                justify-content: center;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Iman F. Qureshi</h1>
-    <p>Hi! I’m an MSc student in Applied Social Data Science at the London School of Economics and Political Science. </p>
-    <p>I hold a B.A. in Political Science from the University of California, Berkeley where I received the departmental citation (valedictorian) and highest honors in my major.
-    </p>
+    <header>
+        <h1>Iman F. Qureshi</h1>
+    </header>
+
+    <div class="container">
+        <div class="profile-section">
+            <div class="profile-image">
+                <img src="https://via.placeholder.com/250x300/FFB6C1/FFFFFF?text=Your+Photo" alt="A picture of me!">
+            </div>
+            
+            <div class="profile-content">
+                <h2>About Me</h2>
+                <p>
+                    Hello! I'm an MSc student in Applied Social Data Science at the London School of Economics and Political Science. 
+                    I hold a B.A. in Political Science from the University of California, Berkeley where I received the Departmental Citation (Valedictorian) and graudated with the highest honours.
+                    As a computational social scientist in-the-making, I enjoy learning about quantitative research methods especially Data Analysis, Machine Learning, and Natural Language Processing. 
+                    My research interests include political behaviour, AI governance and safeguard evaluations, tech regulation, and the socio-political impacts of social media. 
+                </p>
+                <p>
+                    I'd love to connect with you! 
+                    Please email me at i.qureshi3@lse.ac.uk, connect with me on Linkedin or follow my Github!
+                </p>
+
+                <div class="social-links">
+                    <a href="www.linkedin.com/in/imanfqureshi" target="_blank">
+                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                        LinkedIn
+                    </a>
+                    <a href="https://github.com/imanfq" target="_blank">
+                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
+                        </svg>
+                        GitHub
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
