--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Iman F. Qureshi</h1>
+        <header>
+        <div class="header-content">
+            <nav class="header-nav">
+                <a href="cv.pdf" target="_blank">Resume</a>
+            </nav>
+        </div>
     </header>
 
     <div class="container">
@@ -140,7 +144,7 @@
             </div>
             
             <div class="profile-content">
-                <h2>About Me</h2>
+                <h2>Iman F. Qureshi</h2>
                 <p>
                     Hello! I'm an MSc student in Applied Social Data Science at the London School of Economics and Political Science. 
                     I hold a B.A. in Political Science from the University of California, Berkeley where I received the Departmental Citation (Valedictorian) and graudated with the highest honours.
