--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <header>
         <div class="header-content">
             <nav class="header-nav">
-                <a href="cv.pdf" target="_blank">Resume</a>
+                <a href="https://github.com/imanfq/imanfq.github.io/blob/main/Iman%20Qureshi%20-%20CV.pdf" target="_blank">Resume</a>
             </nav>
         </div>
     </header>
