--- a/index.html
+++ b/index.html
@@ -24,6 +24,43 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
+            header .header-content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+header h1 {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 300;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+.header-nav {
+    position: absolute;
+    right: 2rem;
+}
+
+.header-nav a {
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem 1.5rem;
+    border: 2px solid white;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+    font-weight: 500;
+}
+
+.header-nav a:hover {
+    background: white;
+    color: #A0435D;
+}
+
         header h1 {
             color: white;
             font-size: 2.5rem;
@@ -140,14 +177,14 @@
     <div class="container">
         <div class="profile-section">
             <div class="profile-image">
-                <img src="https://github.com/imanfq/imanfq.github.io/blob/main/610_4664.jpg" alt="A picture of me!">
+            <img src="https://raw.githubusercontent.com/imanfq/imanfq.github.io/main/610_4664.jpg" alt="A picture of me!">
             </div>
             
             <div class="profile-content">
                 <h2>Iman F. Qureshi</h2>
                 <p>
                     Hello! I'm an MSc student in Applied Social Data Science at the London School of Economics and Political Science. 
-                    I hold a B.A. in Political Science from the University of California, Berkeley where   <a href="https://youtu.be/yaevmjWFc6o?si=YUnBiMGbGEpWxFqL " target="_blank">I received the Departmental Citation (Valedictorian)</a> and graudated with the highest honours.
+                    I hold a B.A. in Political Science from the University of California, Berkeley where <a href="https://youtu.be/yaevmjWFc6o?si=YUnBiMGbGEpWxFqL " target="_blank">I received the Departmental Citation (Valedictorian) and graudated with the highest honours.</a>
                     As a computational social scientist in-the-making, I enjoy learning about quantitative research methods especially Data Analysis, Machine Learning, and Natural Language Processing. 
                     My research interests include political behaviour, AI governance and safeguard evaluations, tech regulation, and the socio-political impacts of social media. 
                 </p>
