--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ header h1 {
 
 .header-nav {
     position: absolute;
-    right: 2rem;
+    left: 2rem;
 }
 
 .header-nav a {
@@ -191,8 +191,9 @@ header h1 {
                     My research interests include political behaviour, AI governance and safeguard evaluations, tech regulation, and the socio-political impacts of social media. 
                 </p>
                 <p>
-                    I'd love to connect with you 
-                    You can email me at i.qureshi3@lse.ac.uk, connect with me on Linkedin or follow my Github!
+                    I'd love to connect! 
+                    
+                    You can reach out via email to i.qureshi3@lse.ac.uk, connect on Linkedin or follow my Github!
                 </p>
 
                 <div class="social-links">
