--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
                   
                 <p> I hold a B.A. in Political Science from the University of California, Berkeley where <a href="https://youtu.be/yaevmjWFc6o?si=YUnBiMGbGEpWxFqL " target="_blank">I received the Departmental Citation (Valedictorian) and graudated with the highest honours.</a></p> 
                     
-                <p>As a computational social scientist in-the-making, I enjoy learning about quantitative research methods especially Data Exploration Techniques, Machine Learning, and Natural Language Processing. 
+                <p>As a computational social scientist in-the-making, I enjoy learning about quantitative research methods especially Machine Learning, and Natural Language Processing. 
                     My research interests include political behaviour, AI governance and safeguard evaluations, tech regulation, and the socio-political impacts of social media. 
                 </p>
                 <p>
-                    I'd love to connect! <br>
-                    You can send an email to i.qureshi3@lse.ac.uk, connect on Linkedin, or follow my Github!
+                    Please reach out to me if you know of any career opportunities in data science/analytics, technology policy, or computational social science research. <br>
+                    Feel free to send an email to i.qureshi3@lse.ac.uk, connect on Linkedin, or follow my Github!
                 </p>
 
             </div>
