--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                     My research interests include political behaviour, AI governance and safeguard evaluations, tech regulation, and the socio-political impacts of social media. 
                 </p>
                 <p>
-                    Please reach out to me if you know of any career opportunities in data science/analytics, technology policy, or computational social science research. <br>
-                    Feel free to send an email to i.qureshi3@lse.ac.uk, connect on Linkedin, or follow my Github!
+                    I'm currently applying for internships and full-time roles in data science/analytics, technology policy, or computational social science research.
+                    If you can connect me with any such opportunities, please reach out via email to i.qureshi3@lse.ac.uk, connect on Linkedin, or follow my Github!
                 </p>
 
             </div>
