--- a/index.html
+++ b/index.html
@@ -171,13 +171,16 @@
             <nav class="header-nav">
                 <a href="https://github.com/imanfq/imanfq.github.io/blob/main/Iman%20Qureshi%20-%20CV.pdf" target="_blank"><h1>Resume</h1></a>
             </nav>
+            <nav class="header-nav">
+                <h1>Research</h1>
+            </nav>
         </div>
     </header>
 
     <div class="container">
         <div class="profile-section">
             <div class="profile-image">
-            <img src="https://raw.githubusercontent.com/imanfq/imanfq.github.io/main/610_4664.jpg" alt="A picture of me!">
+            <img src="https://raw.githubusercontent.com/imanfq/imanfq.github.io/main/resources/610_4664.jpg" alt="A picture of me!">
             <div class="social-links">
                     <a href="https://linkedin.com/in/imanfqureshi" target="_blank">
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
