--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             position: absolute;
             right: 2rem;
         }
+
+         .header-nav-b {
+            position: absolute;
+            right: 1rem;
+        }
         
         .header-nav a {
             color: white;
@@ -54,6 +59,8 @@
             border-radius: 25px;
             transition: all 0.3s ease;
             font-weight: 500;
+            position: absolute;
+            right: 2rem;
         }
         
         .header-nav a:hover {
@@ -171,9 +178,9 @@
             <nav class="header-nav">
                 <a href="https://github.com/imanfq/imanfq.github.io/blob/main/Iman%20Qureshi%20-%20CV.pdf" target="_blank"><h1>Resume</h1></a>
             </nav>
-            <nav class="header-nav">
+            <nav-b class="header-nav">
                 <h1>Research</h1>
-            </nav>
+            </nav-b>
         </div>
     </header>
 
