--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <nav class="header-nav">
                 <a href="https://github.com/imanfq/imanfq.github.io/blob/main/Iman%20Qureshi%20-%20CV.pdf" target="_blank"><h1>Resume</h1></a>
             </nav>
-            <nav-b class="header-nav">
+            <nav-b class="header-nav-b">
                 <h1>Research</h1>
             </nav-b>
         </div>
