--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   
                 <p> I hold a B.A. in Political Science from the University of California, Berkeley where <a href="https://youtu.be/yaevmjWFc6o?si=YUnBiMGbGEpWxFqL " target="_blank">I received the Departmental Citation (Valedictorian) and graudated with the highest honours.</a></p> 
                     
-                <p>I enjoy learning about quantitative research methods especially Experimental and Correlational Research Methods, Machine Learning, and Natural Language Processing. 
+                <p>I enjoy learning about quantitative research methods especially experimental research designs, Machine Learning, and Natural Language Processing. 
                     My research interests include political behaviour, AI governance and safeguard evaluations, tech regulation, and the socio-political impacts of social media. 
                 </p>
                 <p>
