--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <header>
         <div class="header-content">
             <nav class="header-nav">
-                <a href="https://github.com/imanfq/imanfq.github.io/blob/main/Iman%20Qureshi%20-%20CV.pdf" target="_blank">
+                <a href="https://www.dropbox.com/scl/fi/w8g5bde9bfef1j45xhbdx/Iman-Qureshi-Resume.pdf?rlkey=obpjz2atrqgb30kj8bpq5phda&st=nhkkn7fo&dl=0" target="_blank">
                     <h1>Resume</h1>
                 </a>
             </nav>
